--- a/hand/src/App.css
+++ b/hand/src/App.css
@@ -1,4 +1,5 @@
 .App {
+    border: 0;
 }
 
 svg {
@@ -38,6 +39,7 @@ root, pre {
     height: 24px;
     font-size: 20px;
     margin-left: 30px;
+    margin-bottom: 30px;
 }
 
 .SentenceEntry-text {
@@ -46,10 +48,20 @@ root, pre {
 
 .Infobox {
     position: fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
     padding: 30px;
     background-color: cornsilk;
     border:3px solid black;
     white-space: pre-line;
+}
+
+.Program {
+    position:fixed;
+    top:30px;
+    left:30px;
+}
+
+.Program textarea {
+    font-family: 'Courier New';
 }
